--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 #!/bin/bash
-export DATABASE_URL=postgres://postgres:postgres@localhost/postgres
+export DATABASE_URL=postgres://postgres:postgres@localhost/iqiper
