--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ tokio = { version = "0.2", features = ["rt-threaded", "macros", "blocking"] }
 anyhow = "1"
 log = "0.4.11"
 env_logger = "0.8"
+getset = "0.1.1"
