--- a/basiliq-database-scanner/Cargo.toml
+++ b/basiliq-database-scanner/Cargo.toml
@@ -19,3 +19,8 @@ tokio = { version = "1", features = ["full"] }
 [dev-dependencies]
 anyhow = "1"
 env_logger = "0.8"
+
+[dev-dependencies.cargo-husky]
+version = "1"
+default-features = false # Disable features which are enabled by default
+features = ["precommit-hook", "run-cargo-check", "run-cargo-fmt"]
