--- a/basiliq-database-scanner/Cargo.toml
+++ b/basiliq-database-scanner/Cargo.toml
@@ -14,6 +14,7 @@ getset = "0.1.1"
 itertools = "0.10.0"
 ciboulette = { git = "https://gitlab.com/basiliq/ciboulette.git", features = [ "sqlx_postgres" ], package = "ciboulette" }
 ciboulette2postgres = { git = "https://gitlab.com/basiliq/ciboulette2postgres.git", package = "ciboulette2postgres" }
+messy_json = { git = "https://gitlab.com/basiliq/messy_json.git"}
 tokio = { version = "1", features = ["full"] }
 
 [dev-dependencies]
