--- a/basiliq-database-scanner/Cargo.toml
+++ b/basiliq-database-scanner/Cargo.toml
@@ -15,13 +15,13 @@ thiserror = "1"
 
 [dependencies.ciboulette]
 features = ["sqlx_postgres"]
-# git = "https://gitlab.com/basiliq/ciboulette.git"
-path = "../../ciboulette"
+git = "https://gitlab.com/basiliq/ciboulette.git"
+# path = "../../ciboulette"
 package = "ciboulette"
 
 [dependencies.ciboulette2postgres]
-# git = "https://gitlab.com/basiliq/ciboulette2postgres.git"
-path = "../../ciboulette2postgres"
+git = "https://gitlab.com/basiliq/ciboulette2postgres.git"
+# path = "../../ciboulette2postgres"
 package = "ciboulette2postgres"
 
 [dependencies.messy_json]
