--- a/basiliq/Cargo.toml
+++ b/basiliq/Cargo.toml
@@ -1,26 +1,27 @@
 [package]
-name = "basiliq"
-version = "0.1.0"
 authors = ["Francis Le Roy <francis.leroy@protonmail.ch>"]
 edition = "2018"
+name = "basiliq"
+version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
 better_cli = ["clap/suggestions", "clap/wrap_help", "clap/color"]
 
 [dependencies]
-hyper = { version = "0.14", features = ["full"] }
-tokio = { version = "1", features = ["full"] }
+basiliq_database_scanner = {version = "*", path = "../basiliq-database-scanner", package = "basiliq_database_scanner"}
+clap = {version = "2", features = ["yaml"]}
 env_logger = "0.8"
-log = "0.4.11"
-clap = { version = "2", features = [ "yaml" ] }
-sqlx = { version = "0.5", features = [ "postgres", "runtime-tokio-rustls", "json", "uuid", "chrono", "bigdecimal" ] }
-basiliq_database_scanner = { version = "*", path = "../basiliq-database-scanner", package = "basiliq_database_scanner"}
 getset = "0.1"
-thiserror = "1"
+hyper = {version = "0.14", features = ["full"]}
+log = "0.4.11"
 serde = "1"
 serde_json = "1"
 serde_yaml = "0.8"
+sqlx = {version = "0.5", features = ["postgres", "runtime-tokio-rustls", "json", "uuid", "chrono", "bigdecimal"]}
+thiserror = "1"
+tokio = {version = "1", features = ["full"]}
+trust-dns-resolver = {version = "0.20", features = ["tokio", "dns-over-rustls", "dns-over-https-rustls", "mdns", "ipconfig"]}
 
 [dependencies.ciboulette2postgres]
 git = "https://gitlab.com/basiliq/ciboulette2postgres.git"
