Added a lot of error structs for handling errors when processing requests

--- a/basiliq/Cargo.toml
+++ b/basiliq/Cargo.toml
@@ -25,6 +25,11 @@ tokio = {version = "1", features = ["full"]}
 trust-dns-resolver = {version = "0.20", features = ["tokio", "dns-over-rustls", "dns-over-https-rustls", "mdns", "ipconfig"]}
 url = "2.2.0"
 bytes = { version = "1"}
+casey = "0.3.3"
+paste = "1.0"
+uuid = "0.8"
+serde_urlencoded = "0.7"
+
 [dependencies.ciboulette2postgres]
 git = "https://gitlab.com/basiliq/ciboulette2postgres.git"
 # path = "../../ciboulette2postgres"
