--- a/basiliq/Cargo.toml
+++ b/basiliq/Cargo.toml
@@ -29,6 +29,7 @@ casey = "0.3.3"
 paste = "1.0"
 uuid = "0.8"
 serde_urlencoded = "0.7"
+buf_redux = { version = "0.8" }
 
 [dependencies.ciboulette2postgres]
 git = "https://gitlab.com/basiliq/ciboulette2postgres.git"
