--- a/basiliq/Cargo.toml
+++ b/basiliq/Cargo.toml
@@ -13,7 +13,7 @@ basiliq_database_scanner = {version = "*", path = "../basiliq-database-scanner",
 clap = {version = "2", features = ["yaml"]}
 tracing = { version = "0.1", features = [ "log" ] }
 tracing-log = { version = "0.1", features = [ "env_logger" ] }
-tracing-subscriber = { version = "0.2.17", features = ["json", "fmt" ] }
+tracing-subscriber = { version = "0.2.17", features = ["json", "fmt", "chrono" ] }
 getset = "0.1"
 hyper = {version = "0.14", features = ["full"]}
 serde = "1"
