Added a helper crate for tests + template tests

--- a/basiliq-database-scanner/Cargo.toml
+++ b/basiliq-database-scanner/Cargo.toml
@@ -42,10 +42,9 @@ features = ["serde", "v4"]
 version = "0.8"
 
 [dev-dependencies]
+basiliq_test_utils = {version = "*", path = "../basiliq-test-utils", package = "basiliq_test_utils"}
 anyhow = "1"
 env_logger = "0.8"
-lazy_static = "1.4"
-num_cpus = "1.13.0"
 
 [dev-dependencies.cargo-husky]
 default-features = false
