--- a/basiliq/Cargo.toml
+++ b/basiliq/Cargo.toml
@@ -21,7 +21,7 @@ hyper = {version = "0.14", features = ["full"]}
 serde = "1"
 serde_json = "1"
 serde_yaml = "0.8"
-sqlx = {version = "0.5", features = ["postgres", "runtime-tokio-rustls", "json", "uuid", "chrono", "bigdecimal", "offline"]}
+sqlx = {version = "0.5", features = ["postgres", "runtime-tokio-rustls", "json", "uuid", "chrono", "bigdecimal"]}
 thiserror = "1"
 tokio = {version = "1", features = ["full"]}
 trust-dns-resolver = {version = "0.20", features = ["tokio", "dns-over-rustls", "dns-over-https-rustls", "mdns", "ipconfig"]}
