--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ stages:
   - build
   - test
   - pack
+  - deploy_prepare
 
 basic_checks:
   stage: checks
@@ -110,3 +111,16 @@ kaniko_tag:
   script:
     - echo "{\"auths\":{\"$CI_REGISTRY\":{\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}}}" > /kaniko/.docker/config.json
     - /kaniko/executor --context $CI_PROJECT_DIR --destination $CI_REGISTRY_IMAGE/basiliq:$CI_COMMIT_TAG --build-arg DEPLOY_USERNAME=$DEPLOY_USERNAME --build-arg DEPLOY_PASSWORD=$DEPLOY_PASSWORD
+
+# copy_image_to_heroku:
+#   stage: deploy_prepare
+#   only:
+#     refs:
+#       - main
+#   image:
+#     name: gcr.io/go-containerregistry/crane:debug
+#     entrypoint: [""]
+#   script:
+#     - crane auth login -u _ -p $HEROKU_API_KEY registry.heroku.com
+#     - crane auth login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY 
+#     - crane cp $CI_REGISTRY_IMAGE/basiliq:latest registry.heroku.com/basiliq-demo/web
