--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -96,7 +96,7 @@ kaniko_master:
     - |-
       cat <<EOF > /kaniko/.docker/config.json
       {
-        "auth": {
+        "auths": {
           "$CI_REGISTRY": {
             "username": "$CI_REGISTRY_USER",
             "password": "$CI_REGISTRY_PASSWORD"
@@ -149,7 +149,7 @@ kaniko_tag:
     - |-
       cat <<EOF > /kaniko/.docker/config.json
       {
-        "auth": {
+        "auths": {
           "$CI_REGISTRY": {
             "username": "$CI_REGISTRY_USER",
             "password": "$CI_REGISTRY_PASSWORD"
