Added signal handler

--- a/basiliq/Cargo.toml
+++ b/basiliq/Cargo.toml
@@ -31,7 +31,7 @@ uuid = "0.8"
 serde_urlencoded = "0.7"
 buf_redux = { version = "0.8" }
 num_cpus = "1.13.0"
-
+futures = "0.3"
 [dependencies.ciboulette2pg]
 git = "https://github.com/basiliqio/ciboulette2pg.git"
 branch = "main"
