--- a/basiliq/Cargo.toml
+++ b/basiliq/Cargo.toml
@@ -4,6 +4,11 @@ edition = "2018"
 name = "basiliq"
 version = "0.1.0"
 
+[[bin]]
+name = "basiliq"
+test = false
+bench = false
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
 better_cli = ["clap/suggestions", "clap/wrap_help", "clap/color"]
