--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,8 +36,14 @@ build_debug:
 build_release:
   stage: build
   image: ekidd/rust-musl-builder
+  except:
+    variables:
+      - $CI_COMMIT_TAG
   needs:
    - basic_checks
+  only:
+    refs:
+      - main
   artifacts:
     paths:
       - target/x86_64-unknown-linux-musl/release/basiliq
@@ -172,4 +178,5 @@ deploy_heroku:
       - main
   image: buddy/heroku-cli
   script:
+    - heroku pg:backups:restore 'https://github.com/basiliqio/basiliq_db_test_utils/raw/main/basiliq_test_db.dump' DATABASE_URL
     - heroku container:release -a basiliq-demo web
