Fixed CI deploy script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -178,5 +178,5 @@ deploy_heroku:
       - main
   image: buddy/heroku-cli
   script:
-    - heroku pg:backups:restore 'https://github.com/basiliqio/basiliq_db_test_utils/raw/main/basiliq_test_db.dump' DATABASE_URL
+    - heroku pg:backups:restore -a basiliq-demo 'https://github.com/basiliqio/basiliq_db_test_utils/raw/main/basiliq_test_db.dump' DATABASE_URL
     - heroku container:release -a basiliq-demo web
