--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,16 +37,16 @@ url = "2.2.0"
 uuid = "0.8"
 
 [dependencies.ciboulette2pg]
-git = "https://github.com/basiliqio/ciboulette2pg.git"
-branch = "main"
+# git = "https://github.com/basiliqio/ciboulette2pg.git"
+# branch = "main"
 package = "ciboulette2pg"
 version = "0.1"
 
 [dependencies.ciboulette]
 features = ["sqlx_postgres"]
 version = "0.1"
-branch = "main"
-git = "https://github.com/basiliqio/ciboulette.git"
+# branch = "main"
+# git = "https://github.com/basiliqio/ciboulette.git"
 package = "ciboulette"
 
 [dependencies.messy_json]
